# monerodui

./: .gitignore  CHANGELOG  README.md  build.sh  buildozer.spec  pyproject.toml
.github/workflows/: build.yml
android/java/org/monerodui/monerodui/: BootReceiver.java
android/p4a-recipes/monerod/: __init__.py
src/: main.py
src/monerodui/: __main__.py  requirements.txt  service.py
src/monerodui/components/: __init__.py  node_stats_card.py  status_card.py
src/monerodui/libs/: __init__.py  arch_detector.py  network_info.py  node_stats.py  process_manager.py  update_checker.py  version_checker.py
src/monerodui/screens/: __init__.py  main_screen.py
src/monerodui/settings/: settings_schema.json
src/monerodui/ui/components/: node_stats_card.kv  status_card.kv
src/monerodui/ui/screens/: main.kv
src/monerodui_web/: README.md  __init__.py  __main__.py  main.py
src/monerodui_web/components/: __init__.py  node_stats_card.py  status_card.py
src/monerodui_web/core/: __init__.py  app_state.py  clipboard.py  config_manager.py  monero_release.py  process_adapter.py
src/monerodui_web/pages/: __init__.py  dashboard.py  settings.py
