[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monerodui"
version = "0.1.0"
description = "monerod UI — Kivy desktop app and NiceGUI web companion for managing a monerod node."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Terry A. Davis", email = "terry@monerodui.org" },
]
# Kivy desktop deps live under [tool.briefcase.app.monerodui.requires];
# the [project] table here is intentionally lean so `pip install
# .[web]` can install the web UI without dragging Kivy in.
dependencies = []

[project.optional-dependencies]
web = [
    "nicegui>=2.0.0",
]

[project.scripts]
monerodui-web = "monerodui_web.main:main"

[project.urls]
Homepage = "https://monerod.org/monerodui"

[tool.setuptools.packages.find]
where = ["src"]
include = ["monerodui*", "monerodui_web*"]

[tool.briefcase]
project_name = "monerod UI"
bundle = "org.monerodui"
version = "0.1.0"
url = "https://monerod.org/monerodui"
license.file = "LICENSE"
author = "Terry A. Davis"
author_email = "terry@monerodui.org"

[tool.briefcase.app.monerodui]
formal_name = "monerod UI"
description = "monerod UI"
long_description = """Manage monerod.
"""
sources = [
    "src/monerodui",
    "desktop/binary/monerod",
]

requires = [
    "Kivy==2.3.1",
    "Kivy_examples==2.3.1",
    "kivymd @ https://github.com/kivymd/KivyMD/archive/refs/heads/master.zip",
]

[tool.briefcase.app.monerodui.linux]
system_requires = [
    "pkg-config",
    "libcairo2-dev",
    "libgirepository1.0-dev",
    "libffi-dev",
]

